# CSAPP

./: .env  .env.example  .gitignore  AUDITORIA_SQL.md  BACKUP_GUIDE.md  COMO_APLICAR_EM_PRODUCAO.md  DEPLOY_NOTES.md  FASE_1_COMPLETA.md  FASE_2_COMPLETA.md  FASE_3_COMPLETA.md  FASE_4_COMPLETA.md  GUIA_EXECUCAO_TESTES.md  GUIA_HIERARQUIA.md  GUIA_NOVAS_FUNCIONALIDADES.md  GUIA_RAPIDO.md  INSTRUCOES_FINAIS.md  MELHORIAS_IMPLEMENTADAS.md  MELHORIAS_ROUND_2_IMPLEMENTADAS.md  PLANO_MELHORIAS.md  PROBLEMAS_CORRIGIDOS.md  PROXIMAS_MELHORIAS.md  Procfile  README.md  README_MELHORIAS.md  RESUMO_FASE_1.md  RESUMO_FINAL.md  RESUMO_FINAL_TESTES.md  RESUMO_IMPLEMENTACAO_COMPLETA.md  SEGURANCA_CREDENCIAIS.md  TESTES_IMPLEMENTADOS.md  TODAS_MELHORIAS_IMPLEMENTADAS.md  VERIFICACAO_FINAL.md  alembic.ini  app.py  check_db.py  dashboard_simples.db  diagnostic_oauth.py  et --hard 349c2763a9d1e0cf42596a34af1d60104303138  onboarding_cs.db  package-lock.json  (+5 more)
cs-onboarding/: .env.example  .gitignore  .pre-commit-config.yaml  ABRIR_TUNEL.bat  AUDITORIA_BUGS.md  CLEANUP_REPORT_2026-01-25.md  CONTRIBUTING.md  CORRECAO_OAMD_IMPLEMENTADA.md  DASHBOARD_REFACTORING_PLAN.md  DIAGNOSTICO_ERRO_404_OAMD.md  GUIA_DIAGNOSTICO_OAMD.md  INICIAR_TUNEL_OAMD.bat  INICIAR_TUNEL_PRODUCAO.bat  MELHORIAS_COMENTARIOS_UI.md  PRODUCTION.md  PROXY_SETUP.md  QUALITY_GUIDE.md  RAILWAY_DEPLOY.md  README.md  REFACTORING_REPORT.md  TEMPLATES_REFACTORING.md  abrir_tunel.py  add_cascade_fk.py  add_noshow_column.py  add_tag_column.py  add_tag_comentarios.py  alembic.ini  alembic_history.txt  analyze_oamd_schema.py  apply_google_tokens_migration.py  backup_database.py  buscar_dados_completos_oamd.py  buscar_tabelas_oamd.py  campos_oamd_11350.json  check_all_comments.py  check_comentarios.py  check_comments.py  check_comments_detailed.py  check_data.py  check_db_structure.py  (+67 more)
cs-onboarding/.agent/: BUG_FIXES_2025-12-21.md  RELATORIO_SEGURANCA_FINAL.md  analise_seguranca.md  perfil_padrao.md
cs-onboarding/backend/: check_prod_db.py  fix_db.py  repair_data.py  run_local.py  test_comments_api.py  test_json_preview.py
cs-onboarding/docs/: ANALISE-TEMPLATES-HTML.md  ANALISE_N1_COMPLETA.md  ANALISE_PERFORMANCE.md  CHECKLIST_DEPLOY.md  FUNCIONALIDADE-CLONAR-PLANO.md  GOOGLE_OAUTH_INCREMENTAL.md  GUIA_TESTE_OTIMIZACAO.md  GUIA_TUNEL_OAMD.md  IMPLEMENTACAO_OAUTH_RESUMO.md  INVENTARIO-PROJETO.md  MELHORIAS-PLANOS-SUCESSO.md  OTIMIZACOES_IMPLEMENTADAS.md  PENDENCIAS_IMPLEMENTACAO.md  PLANO-PERFIS-PERMISSOES.md  PLANO_DE_ACAO.md  PLANO_REFATORACAO_COMPLETO.md  PROGRESSO_REFATORACAO.md  RISC_PROTECAO_ENTRE_CONTAS.md  RISC_REGISTRO_GOOGLE.md  STATUS-PERFIS-IMPLEMENTACAO.md  TESTE_OAUTH_INCREMENTAL.md
cs-onboarding/frontend/: .eslintrc.json  package.json  tsconfig.json  vite.config.js
cs-onboarding/migrations/: COMANDOS_PRODUCAO.sql  GUIA_EXECUCAO_PRODUCAO.md  README.md  README_PRODUCAO.md  add_simples_registro_tag.sql  add_valor_atribuido.sql  create_all_config_tables.sql  create_google_tokens_table.sql  create_permissions_table.sql  create_risc_events_table.sql  create_tags_sistema.sql  env.py  producao_melhorias_2025-12-22.sql  producao_melhorias_SIMPLES.sql
cs-onboarding/scripts/: apply_risc_migration.py  check_fk.py  check_forbidden_tracked_files.ps1  create_performance_indexes.py  generate_route_inventory.ps1  prod_migration.py  run_timezone_migration.py  start_production.bat  start_production.sh
cs-onboarding/tests/: buscar_mensalidade.py  conftest.py  explorar_completo.py  explorar_mensalidade_oamd.py  run_oamd_consulta.py  run_tag_update.py  run_timeline_consistency.py  test_analytics_aliases.py  test_auth_routes.py  test_auth_routes_unittest.py  test_checklist_endpoints.py  test_comments_tags_behavior.py  test_consultar_empresa.py  test_criar_implantacao.py  test_environments.py  test_modal_dates.py  test_modal_detalhes_persistencia.py  test_responsavel_prazos.py  test_smoke_repository.py  test_success_plan_full_flow.py  test_tag_update.py  test_timeline_consistency.py  test_timeline_full_coverage.py  test_timeline_logs.py  test_toggle_endpoint.py
(+685 files in other folders)
