# =============================================================
# CS ONBOARDING - CONFIGURAÇÕES DE FERRAMENTAS DE DESENVOLVIMENTO
# =============================================================

[project]
name = "cs-onboarding"
version = "1.0.0"
description = "Sistema de gestão de onboarding de clientes"
requires-python = ">=3.11"

# =============================================================
# RUFF - Linter e Formatter (substitui flake8, isort, black)
# =============================================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    "migrations/versions",
    "*.egg-info",
]

# Regras selecionadas
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking (renamed from TCH)
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Regras ignoradas
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "project"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Imports não usados em __init__ são ok
"tests/*" = ["ARG", "S101"]  # Argumentos e assert em testes são ok
"backend/project/domain/implantacao_service.py" = ["E402"]  # Deferred imports (SOLID refactoring)

# =============================================================
# MYPY - Type Checking
# =============================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

# Excluir arquivos legados sem types
exclude = [
    "migrations/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_limiter.*",
    "flask_caching.*",
    "authlib.*",
    "psycopg2.*",
    "boto3.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

# =============================================================
# PYTEST - Testes
# =============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:sqlite3.*:",
    "ignore:The default datetime adapter is deprecated:DeprecationWarning",
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================
# COVERAGE - Cobertura de Código
# =============================================================
[tool.coverage.run]
branch = true
source = ["backend/project"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 0  # TODO: Aumentar quando houver mais testes
show_missing = true

# =============================================================
# BANDIT - Análise de Segurança
# =============================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # assert usado em testes
    "B104",  # bind to all interfaces (ok para dev)
]


